add phone to contacts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,8 @@ button.links.left-link a {
 a.navbar-brand {
   font-family: 'Fontdiner Swanky', cursive;
 }
+
+.contact-msg-name {
+  text-align:center;
+
+}
