--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render "layouts/errors", :object => @message %>
 
-<%= form_for @message  do |f| %>
+<%= form_for [@contact, @message] do |f| %>
   <%= f.label :from %>
   <%= f.text_field :from %>
   <%= f.label :to %>
