add collection routing to prepare for group texting

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,3 +66,10 @@ a.navbar-brand {
   text-align:center;
 
 }
+.all-moms {
+  font-family: 'Fontdiner Swanky', cursive;
+  font-size: 28px;
+  letter-spacing: 1.15;
+  color:  #81b33a;
+  text-align:left;
+}
