--- a/app/views/contacts/all.html.erb
+++ b/app/views/contacts/all.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Text Your Mom | Contacts" %>
+<% content_for :title, "Text Your Mom | Send Group" %>
 
 
 <div class='row'>
@@ -18,9 +18,3 @@
     <% end %>
 
   </div>
-
-  <button class="links left-link"><%= link_to 'Add a new Contact', new_contact_path, id: "new_contact_link" %></button>
-  <button class="links left-link"><%= link_to 'Group Text Some Moms', all_contacts_path, id: "new_contact_link" %></button>
-</row>
-
-</row>
