--- a/app/views/contacts/all.html.erb
+++ b/app/views/contacts/all.html.erb
@@ -9,10 +9,10 @@
   <div class="col-lg-12 message-display">
     <h1 class="headline">Text Your Mom</h1>
     <hr>
-    <h3 class="all-moms"> All Available Moms: </h3>
+    <h3 class="group-moms"> Choose who you want in the text group: </h3>
     <% @contacts.each  do |contact| %>
     <div class="col-lg-4">
-      <h3 class="contact-name"><span>Contact Name: </span><%= link_to contact.name, contact_path(contact)%></h3>
+      <h5 class="contact-name"><span>Name: </span><%= link_to contact.name, contact_path(contact)%></h5>
     <hr>
     </div>
     <% end %>
